[gd_scene load_steps=31 format=3 uid="uid://onbusoqpqk1v"]

[ext_resource type="Script" path="res://scenes/level/Level.gd" id="1_1oecb"]
[ext_resource type="PackedScene" uid="uid://x85sq4j4mclu" path="res://scripts/recognizer/Recognizer.tscn" id="2_h0bn1"]
[ext_resource type="PackedScene" uid="uid://b48df57iash2r" path="res://sprites/character/Character.tscn" id="3_j17jd"]
[ext_resource type="Script" path="res://scenes/level/LineDrawer.gd" id="4_bcnt4"]
[ext_resource type="AudioStream" uid="uid://i6f65dbwrvnc" path="res://scenes/level/assets/Off To Adventure Fm 97 ( Funny Music ).mp3" id="4_qwpft"]
[ext_resource type="Texture2D" uid="uid://fd4g0oce0t8o" path="res://themes/forest/assets/won.png" id="5_2ye2h"]
[ext_resource type="AudioStream" uid="uid://d8g1kivp07t3" path="res://scenes/pause_menu/assets/pause_test_sound.ogg" id="5_ryf10"]
[ext_resource type="Texture2D" uid="uid://c747yvjldkpr0" path="res://themes/forest/assets/button try again.png" id="6_m3ltd"]
[ext_resource type="Texture2D" uid="uid://skc8h3de7jjq" path="res://themes/forest/assets/game coin1.png" id="6_vdq7o"]
[ext_resource type="Texture2D" uid="uid://tr1shrhd0b8d" path="res://themes/forest/assets/button quit.png" id="7_fqhs3"]
[ext_resource type="Texture2D" uid="uid://d2rx6nnejdoj3" path="res://themes/forest/assets/challenges play big.png" id="7_k1hwa"]
[ext_resource type="PackedScene" uid="uid://bycygkmcyjf1n" path="res://sprites/coin/Coin.tscn" id="7_ow8il"]
[ext_resource type="Texture2D" uid="uid://bgu53drfuoy21" path="res://themes/forest/assets/lose.png" id="8_q4lav"]
[ext_resource type="PackedScene" uid="uid://dbfh1alqkfy2t" path="res://scenes/ui/SceneTransition/SceneTransition.tscn" id="10_6wfp1"]
[ext_resource type="FontFile" uid="uid://d2ccfxixk7oac" path="res://sprites/ui_assets/fonts/NunitoSans_7pt-Bold.ttf" id="14_oery0"]
[ext_resource type="PackedScene" uid="uid://dgsl8pomn0a1p" path="res://scenes/pause_menu/PauseMenu.tscn" id="14_uvdyp"]
[ext_resource type="Texture2D" uid="uid://d1li4qvgtlqpx" path="res://themes/forest/assets/button green.png" id="15_g23r6"]
[ext_resource type="PackedScene" uid="uid://buwv56apeiiwo" path="res://scenes/pause_menu/pause_button.tscn" id="16_6xale"]
[ext_resource type="Texture2D" uid="uid://c2afeg4ioj677" path="res://sprites/ui_assets/sheet_white1x.png" id="19_2btgj"]
[ext_resource type="PackedScene" uid="uid://cbbkv1vlsfc1i" path="res://scenes/ui/BonusButtons/bonus_button.tscn" id="20_kuh04"]
[ext_resource type="PackedScene" uid="uid://8tleup6l0yxb" path="res://scenes/ui/BonusButtons/change_rune_button.tscn" id="20_oailr"]
[ext_resource type="PackedScene" uid="uid://c3ecup5y7jk64" path="res://scenes/ui/BonusButtons/bomb_button.tscn" id="21_3pio7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lfodo"]
texture = ExtResource("6_vdq7o")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bhkg2"]
texture = ExtResource("5_2ye2h")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t7bhx"]
resource_local_to_scene = true
texture = ExtResource("8_q4lav")
texture_margin_top = 213.0
texture_margin_bottom = 65.0

[sub_resource type="FontVariation" id="FontVariation_4t66v"]
base_font = ExtResource("14_oery0")
variation_embolden = 0.69

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tpym1"]
content_margin_left = 110.0
content_margin_top = 25.0
content_margin_right = 40.0
content_margin_bottom = 55.0
texture = ExtResource("15_g23r6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o46ss"]
content_margin_left = 110.0
content_margin_top = 25.0
content_margin_right = 40.0
content_margin_bottom = 55.0
texture = ExtResource("15_g23r6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5nfiv"]
content_margin_left = 110.0
content_margin_top = 25.0
content_margin_right = 40.0
content_margin_bottom = 55.0
texture = ExtResource("15_g23r6")

[sub_resource type="AtlasTexture" id="AtlasTexture_6n4ld"]
atlas = ExtResource("19_2btgj")
region = Rect2(359, 410, 32, 32)

[node name="Level" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_1oecb")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -300)

[node name="Recognizer" parent="." instance=ExtResource("2_h0bn1")]
TRAINING = false
DRAW_LINE = false
SAVE_NN = false
LOAD_NN = true

[node name="Character" parent="." instance=ExtResource("3_j17jd")]
z_index = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_qwpft")
volume_db = -8.0
bus = &"Music"

[node name="TestSoundPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_ryf10")
volume_db = -8.0

[node name="DrawerLayer" type="CanvasLayer" parent="."]

[node name="LineDrawer" type="Node2D" parent="DrawerLayer"]
script = ExtResource("4_bcnt4")
recognizer = NodePath("../../Recognizer")

[node name="ScoreContainer" type="PanelContainer" parent="DrawerLayer"]
offset_left = 10.0
offset_top = 20.0
offset_right = 419.0
offset_bottom = 145.0
theme_override_styles/panel = SubResource("StyleBoxTexture_lfodo")

[node name="MarginContainer" type="MarginContainer" parent="DrawerLayer/ScoreContainer"]
layout_mode = 2
theme_override_constants/margin_right = 20

[node name="Label" type="Label" parent="DrawerLayer/ScoreContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Coin" parent="DrawerLayer/ScoreContainer/MarginContainer" instance=ExtResource("7_ow8il")]
z_index = 2
position = Vector2(60, 60)
scale = Vector2(1.75, 1.75)

[node name="BonusButtonPanel" type="Control" parent="DrawerLayer"]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -264.0
offset_top = 832.0
offset_right = -64.0
offset_bottom = -112.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="VBoxContainer" parent="DrawerLayer/BonusButtonPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -660.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 30

[node name="MilkButton" parent="DrawerLayer/BonusButtonPanel/HBoxContainer" instance=ExtResource("20_kuh04")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1

[node name="BombButton" parent="DrawerLayer/BonusButtonPanel/HBoxContainer" instance=ExtResource("21_3pio7")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1

[node name="ChangeRuneButton" parent="DrawerLayer/BonusButtonPanel/HBoxContainer" instance=ExtResource("20_oailr")]
unique_name_in_owner = true
layout_mode = 2

[node name="WonContainer" type="PanelContainer" parent="DrawerLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -544.5
offset_right = 544.5
offset_bottom = 644.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_bhkg2")

[node name="MarginContainer" type="MarginContainer" parent="DrawerLayer/WonContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 220
theme_override_constants/margin_right = 50

[node name="VBoxContainer" type="VBoxContainer" parent="DrawerLayer/WonContainer/MarginContainer"]
layout_mode = 2

[node name="Restart" type="TextureButton" parent="DrawerLayer/WonContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("7_k1hwa")

[node name="Quit" type="TextureButton" parent="DrawerLayer/WonContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("7_fqhs3")

[node name="LoseContainer" type="PanelContainer" parent="DrawerLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -512.0
offset_right = 512.0
offset_bottom = 900.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_t7bhx")

[node name="MarginContainer" type="MarginContainer" parent="DrawerLayer/LoseContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 67
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="DrawerLayer/LoseContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Restart" type="TextureButton" parent="DrawerLayer/LoseContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_m3ltd")

[node name="Quit" type="TextureButton" parent="DrawerLayer/LoseContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("7_fqhs3")

[node name="HBoxContainer" type="HBoxContainer" parent="DrawerLayer/LoseContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="RespawnBtn" type="Button" parent="DrawerLayer/LoseContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.996078, 0.996078, 0.996078, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 35
theme_override_constants/icon_max_width = 75
theme_override_fonts/font = SubResource("FontVariation_4t66v")
theme_override_font_sizes/font_size = 74
theme_override_styles/normal = SubResource("StyleBoxTexture_tpym1")
theme_override_styles/hover = SubResource("StyleBoxTexture_o46ss")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5nfiv")
text = "save me"

[node name="TextureRect" type="TextureRect" parent="DrawerLayer/LoseContainer/MarginContainer/VBoxContainer/HBoxContainer/RespawnBtn"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 39.0
offset_top = -39.0
offset_right = 99.0
offset_bottom = 17.0
grow_vertical = 2
texture = SubResource("AtlasTexture_6n4ld")
expand_mode = 1
stretch_mode = 5

[node name="PauseMenu" parent="DrawerLayer" instance=ExtResource("14_uvdyp")]
unique_name_in_owner = true
visible = false

[node name="PauseButton" parent="DrawerLayer" instance=ExtResource("16_6xale")]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -90.0
offset_top = 87.0
offset_right = -81.0
offset_bottom = 97.0

[node name="SceneTransitionRect" parent="DrawerLayer" instance=ExtResource("10_6wfp1")]
z_index = 5
offset_top = -16.0
offset_bottom = -16.0
